Fix pkg name. Invalid.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vue Airtable Webpack Simple Starter",
+  "name": "vue-airtable-webpack-simple-starter",
   "description": "A Vue.js start project with examples of connecting with Airtable.",
   "version": "1.0.0",
   "author": "patrickodacre <patrick@patrickwho.me>",
